# video-convertor-rs

./: .gitignore  Cargo.toml  README.md
ai-docs/: project-ideas.ai  start.ai
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  local.rs  main.rs  server_control.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: api_queue.rs  audio.rs  codec.rs  config.rs  container.rs  detect.rs  dispatch.rs  error.rs  filter.rs  format.rs  lib.rs  operation.rs  preset.rs  progress.rs  security.rs  stream.rs  transcode.rs  video.rs
crates/core/src/ffmpeg/: capabilities.rs  command.rs  locate.rs  mod.rs  probe.rs  run.rs
crates/core/tests/: dispatch_queue.rs  engine.rs
crates/core/tests/common/: mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/mcp/tests/: mcp.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  routes.rs  state.rs
crates/server/tests/: api.rs
crates/server/tests/common/: mod.rs
plugin/: Cargo.toml  plugin.toml
plugin/src/: main.rs
plugin/tests/: plugin.rs
