[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/server",
    "crates/mcp",
    "plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal
media-convertor-core = { path = "crates/core" }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# HTTP client (CLI remote mode)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime & HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Dev/test
tempfile = "3"
