[package]
name = "media-convertor-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TTS hub audio converter plugin powered by FFmpeg"

[[bin]]
name = "media-convertor-plugin"
path = "src/main.rs"

[dependencies]
media-convertor-core.workspace = true
uuid.workspace = true
