[package]
name = "media-convertor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media conversion CLI: convert, probe, presets, batch processing"

[[bin]]
name = "media-convertor"
path = "src/main.rs"

[features]
default = []
ffmpeg = ["media-convertor-core/ffmpeg"]
bundled = ["media-convertor-core/bundled"]

[dependencies]
media-convertor-core.workspace = true
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
