[package]
name = "media-convertor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "media-convertor CLI: control plane for the FFmpeg shell — ops, queue, and server management"

[[bin]]
name = "media-convertor"
path = "src/main.rs"

[dependencies]
media-convertor-core.workspace = true
clap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
