[package]
name = "media-convertor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Comprehensive, secure Rust shell over the FFmpeg/ffprobe binaries: capability discovery, structured operations, a reusable persistent request queue, probing, and presets"

[features]
default = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
