[package]
name = "media-convertor-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Media conversion HTTP API server with async job management"

[[bin]]
name = "media-convertor-server"
path = "src/main.rs"

[features]
default = []
ffmpeg = ["media-convertor-core/ffmpeg"]
bundled = ["media-convertor-core/bundled"]

[dependencies]
media-convertor-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
