[package]
name = "media-convertor-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "media-convertor HTTP API: a thin, locked-down, ffmpeg-only surface over the shared request queue"

[[bin]]
name = "media-convertor-server"
path = "src/main.rs"

[dependencies]
media-convertor-core.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
